[workspace]
members = [
    "drivers",
    "kernel-hal",
    "zircon-object",
    "zircon-syscall",
    "linux-object",
    "linux-syscall",
    "loader",
    "zCore",
]

exclude = [
    "zircon-user",
    "rboot",
]

[profile.release]
lto = true

# [patch.'https://github.com/OSLab-zCore/PreemptiveScheduler']
# executor = { path = "../PreemptiveScheduler" }